new booking responsive

--- a/src/app/main/layout/cargo/cargo-look-up/cargo-look-up.component.html
+++ b/src/app/main/layout/cargo/cargo-look-up/cargo-look-up.component.html
@@ -1,9 +1,9 @@
 <div class="cargo-search">
     <div class="row align-items-center">
-        <div class="col-sm-4 text-right offset-4">
+        <div class="col-lg-4 col-md-4 col-sm-4 text-right offset-lg-4 col-4">
             <h5>Cargo Booking Search</h5>
         </div>
-        <div class="col-sm-4">
+        <div class="col-lg-4 col-8 col-sm-8">
             <div class="input-group">
                 <input type="text" class="form-control form-control-sm" placeholder="Search by LR Number"
                        [(ngModel)]="bookingId">
