--- a/src/app/main/layout/reports/service-reports/service-reports.component.html
+++ b/src/app/main/layout/reports/service-reports/service-reports.component.html
@@ -73,6 +73,8 @@
                             <div>Submitted: {{submitted}}</div>
                             <div>Verified: {{verified}}</div>
                             <div>Total: {{allReports.length}}</div>
+                            <div>TotalCashIncome: {{totalCashIncome}}</div>
+                            <div>TotalNetIncome: {{totalNetIncome.toFixed(2)}}</div>
                         </div>
                     </div>
                     <div class="row">
