--- a/src/app/main/layout/layout.component.html
+++ b/src/app/main/layout/layout.component.html
@@ -142,6 +142,11 @@
                     <i class="treeView-indicator fa fa-angle-right"></i>
                 </a>
                 <ul class="treeView-menu">
+                    <li class="waves-effect waves-light">
+                        <a class="treeView-item" [routerLink]="['employee']" [routerLinkActive]="['active']">
+                            <i class="icon fa fa-product-hunt" aria-hidden="true"></i>Employee
+                        </a>
+                    </li>
                     <li class="waves-effect waves-light" *ngIf="canAccessModule('agents')">
                         <a class="treeView-item" [routerLink]="['agents']" [routerLinkActive]="['active']">
                             <i class="icon fa fa-product-hunt" aria-hidden="true"></i>Agents
