--- a/src/app/main/layout/reports/fuel-expense-reports/fuel-expense-reports.component.html
+++ b/src/app/main/layout/reports/fuel-expense-reports/fuel-expense-reports.component.html
@@ -304,9 +304,9 @@
                                        [multiple]="false"
                                        bindLabel="regNo"
                                        [closeOnSelect]="true"
-                                       bindValue="regNo"
+                                       bindValue="id"
                                        placeholder="Select Vehicle"
-                                       [(ngModel)]="searchQuery.vehicleRegNumber"
+                                       [(ngModel)]="searchQuery.vehicleId" (ngModelChange)="searchData()"
                                         [ngModelOptions]="{standalone: true}">
                             </ng-select>
                         </div>
