--- a/src/app/main/layout/reports/cashbalance/cashbalance.component.html
+++ b/src/app/main/layout/reports/cashbalance/cashbalance.component.html
@@ -41,7 +41,7 @@
                             <th>User Name</th>
                             <th>Name</th>
                             <th>Contact</th>
-                            <th>Cash Balance</th>
+                            <th [appFrentendSort]="cashBalanceArray" data-order="desc" data-name="amountToBePaid">Cash Balance <i class="fa fa-sort"></i></th>
                         </tr>
                         </thead>
                         <tbody>
