--- a/src/app/main/layout/cargo/delivery-sheet/delivery-sheet.component.html
+++ b/src/app/main/layout/cargo/delivery-sheet/delivery-sheet.component.html
@@ -307,7 +307,7 @@
                                             [multiple]="false"
                                             bindLabel="fullName"
                                             [closeOnSelect]="true"
-                                            bindValue="id"
+                                            bindValue="fullName"
                                             placeholder="Select User"
                                             [(ngModel)]="deliveredObj.deliveredBy"
                                             [ngModelOptions]="{standalone: true}">
