--- a/src/assets/css/select1.css
+++ b/src/assets/css/select1.css
@@ -916,7 +916,13 @@ input[type="checkbox"].switch_1:checked:after{
 
 .from-chart-left-box {
     /*text-align: right;*/
-    text-align: -webkit-left;
+    /*text-align: -webkit-left;*/
+    background: #fae6d2 !important;
+    padding: 0 10px;
+    border-radius: 10px;
+    margin-top: 15px;
+    font-size: 16px;
+    /*width: 50%;*/
 }
 
 .from-chart-left-box > div {
@@ -939,7 +945,12 @@ input[type="checkbox"].switch_1:checked:after{
 
 .from-chart-right-box {
     /*text-align: right;*/
-    text-align: -webkit-right;
+    /*text-align: -webkit-right;*/
+    background: #ccebcc !important;
+    padding: 0 10px;
+    /*width: 50%;*/
+    border-radius: 10px;
+    font-size: 16px
 }
 
 .from-chart-right-box > div {
