Hide branch offices

--- a/src/app/main/layout/layout.component.html
+++ b/src/app/main/layout/layout.component.html
@@ -157,17 +157,17 @@
                             <i class="icon fa fa-product-hunt" aria-hidden="true"></i>Amenities
                         </a>
                     </li>
-                    <li class="waves-effect waves-light" *ngIf="canAccessModule('branchoffices')">
-                        <a class="treeView-item" [routerLink]="['branchOffices']" [routerLinkActive]="['active']">
-                            <i class="icon fa fa-product-hunt" aria-hidden="true"></i>Branch Offices
-                        </a>
-                    </li>
-                    <li class="waves-effect waves-light" *ngIf="canAccessModule('cities')">
-                        <a class="treeView-item" [routerLink]="['cities']" [routerLinkActive]="['active']">
-                            <i class="icon fa fa-map-marker" aria-hidden="true"></i>Cities
-                        </a>
-                    </li>
-                    <!--          <li class="waves-effect waves-light"  *ngIf="canAccessModule('GSTFilters')">-->
+                    <!--<li class="waves-effect waves-light" *ngIf="canAccessModule('branchoffices')">
+                       <a class="treeView-item" [routerLink]="['branchOffices']" [routerLinkActive]="['active']">
+                           <i class="icon fa fa-product-hunt" aria-hidden="true"></i>Branch Offices
+                       </a>
+                   </li> -->
+                   <li class="waves-effect waves-light" *ngIf="canAccessModule('cities')">
+                       <a class="treeView-item" [routerLink]="['cities']" [routerLinkActive]="['active']">
+                           <i class="icon fa fa-map-marker" aria-hidden="true"></i>Cities
+                       </a>
+                   </li>
+                   <!--          <li class="waves-effect waves-light"  *ngIf="canAccessModule('GSTFilters')">-->
                     <!--            <a class="treeView-item" [routerLink]="['plans']" [routerLinkActive]="['active']">-->
                     <!--              <i class="icon fa fa-search" aria-hidden="true"></i>GST Filters-->
                     <!--            </a>-->
