Only allowed offices to be shown

--- a/src/app/main/layout/master/branch-offices/add-edit-branch-office/add-edit-branch-office.component.html
+++ b/src/app/main/layout/master/branch-offices/add-edit-branch-office/add-edit-branch-office.component.html
@@ -68,14 +68,14 @@
                                       placeholder="enter Address"></textarea>
 
                         </div>
-                        <div class="col-sm-6 col-12 form-group">
+                        <!--<div class="col-sm-6 col-12 form-group">
                             <div class="form-check">
                                 <input type="checkbox" class="form-check-input" id="skipAgentValidity"
                                        [(ngModel)]="branchOffice.allowCargoBooking"
                                        [ngModelOptions]="{standalone: true}">
                                 <label class="form-check-label" for="skipAgentValidity">Allow Cargo Bookings</label>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="col-sm-6 col-12 form-group">
                             <div class="form-check">
                                 <input type="checkbox" class="form-check-input" id="sendInvoiceEmail"
