Push the latest changes

--- a/src/app/main/layout/customer-reports/service-feedback/service-feedback-report/service-feedback-report.component.html
+++ b/src/app/main/layout/customer-reports/service-feedback/service-feedback-report/service-feedback-report.component.html
@@ -46,7 +46,7 @@
                                     <option value="Completed">Completed</option>
                                 </select>
                             </div>
-                            <div class="col-sm-3 form-group">
+                            <!--<div class="col-sm-3 form-group">
                                 <label class="control-label">Send Bulk WhatsApp Messages for Bookings:</label>
                                 <select class="form-control form-control-sm" [(ngModel)]="bookings.selection"
                                         [ngModelOptions]="{standalone: true}">
@@ -60,7 +60,7 @@
                                 <button class="btn btn-primary btn-sm m-2" (click)="sendMessageForBulkBookings()" title="Send To RedBus Bookings">
                                     <i class="fa fa-whatsapp">Send Messages for Selected Bookings</i>
                                 </button>
-                            </div>
+                            </div> -->
                         </div>
                         <div class="row">
                             <div class="table-responsive">
