--- a/src/app/main/layout/reports/due-reports/show-due-payment-summary/show-due-payment-summary.component.html
+++ b/src/app/main/layout/reports/due-reports/show-due-payment-summary/show-due-payment-summary.component.html
@@ -1,3 +1,4 @@
+Total : {{selectedTotal}}
 <button type="button" class="btn btn-sm btn-success" (click)="payBookings(paidSummaryModal)" >
     Pay Bookings
 </button>
